[workspace]

resolver = "2"

members = [
    "examples/dex-subintent",
    "examples/flash-liquidity-subintent",
    "sdk/anthic-client",
    "sdk/anthic-model",
    "sdk/anthic-subintents",
    "sdk/anthic-trade-api-client",
]

[workspace.dependencies]

radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto",  tag = "cuttlefish-c3aa4337" }
radix-common-derive = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "cuttlefish-c3aa4337" }
radix-transactions = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "cuttlefish-c3aa4337" }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "cuttlefish-c3aa4337" }
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "cuttlefish-c3aa4337" }
