[package]
name = "anthic-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "subintents-a4cfee" }
radix-transactions = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "subintents-a4cfee" }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "subintents-a4cfee" }
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "subintents-a4cfee" }
hex = "0.4.3"
