[package]
name = "anthic-subintents"
version = "0.1.0"
edition = "2021"

[dependencies]
radix-common = { workspace = true }
radix-common-derive = { workspace = true }
radix-transactions = { workspace = true }
radix-engine-interface = { workspace = true }
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "cuttlefish-86080d60" }

hex = "0.4.3"
anthic-model = { path = "../anthic-model" }